Fix sidebar on small screens

--- a/documentation/src/css/_sidebar.scss
+++ b/documentation/src/css/_sidebar.scss
@@ -1,30 +1,15 @@
 nav#sidebar {
   display: block;
   position: relative;
+  width: 100%;
   &.sticky {
     position: fixed;
     top: 0px;
   }
   @media (max-height: 800px) {
-    max-height: calc(100vh - 275px);
+    max-height: calc(100vh - 20px);
     overflow-y: scroll;
   }
-  .scroll-wrapper {
-    background-color: var(--color-0);
-    display: none;
-    position: sticky;
-    bottom: 0px;
-    @media (max-height: 800px) {
-      display: block;
-      padding-bottom: 0.7rem;
-    }
-    .scroll {
-      text-align: center;
-      color: var(--color-3);
-      animation: down 1.5s infinite;
-    }
-  }
-
   a {
     display: block;
     margin: 0.35rem 0;
